@@ -1,15 +1,17 @@
 package com.labwork01.app.order.model;
 
 import com.labwork01.app.bouquet.model.BouquetDTO;
+import com.labwork01.app.user.model.UserDTO;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class OrderDTO {
     private Long id;
     private String date;
     private Integer sum;
-
     private List<BouquetDTO> bouquets;
+    private UserDTO user;
 
     public OrderDTO(){
 
@@ -18,7 +20,8 @@ public class OrderDTO {
         id = order.getId();
         date = order.getDate();
         sum = order.getSum();
-        bouquets = order.getBouquets() != null? order.getBouquets().stream().map(BouquetDTO::new).toList() : null;
+        bouquets = order.getBouquets() != null? order.getBouquets().stream().map(BouquetDTO::new).collect(Collectors.toList()) : null;
+        user = new UserDTO(order.getUser());
     }
 
     public Long getId() {
@@ -47,5 +50,13 @@ public class OrderDTO {
 
     public void setBouquets(List<BouquetDTO> bouquets) {
         this.bouquets = bouquets;
+    }
+
+    public UserDTO getUser() {
+        return user;
+    }
+
+    public void setUser(UserDTO user) {
+        this.user = user;
     }
 }
